# ewjn_fieldcalculator

./: .gitignore  CalcContextNumericalTests.nb  CylinderCalcContextNumericalTests.nb  MANIFEST.in  Makefile  README.md  bztest.nb  cylinder.nb  plotter.nb  pyproject.toml  singlevaluetest.nb  snth.nb  sphereBPlots.wls  sphereDipoleCalcTable.nb
ewjn_fieldcalculator/: fieldCalculator.py  runner.py  sphereCalculator.py
reports/: Makefile
reports/cylinder_calc/: Makefile
reports/cylinder_calc/scripts/: cylinderBZalongZUniformZCalc.wls  cylinderBZalongZUniformZPlot.wls
reports/sphere_dipole_source/: Makefile  sphere_dipole_source.tex
reports/sphere_dipole_source/scripts/: sphereAnisotropyPlotter.wls  sphereBPlots.wls  sphereBZAlongXCalcs.wls  sphereBZAlongXPlots.wls  sphereBZAlongZDipoleHighResCalc.wls  sphereBZAlongZPlots.wls  sphereBZalongZUniformCalc.wls
src/wl/: longskindepthewjn.wl
tests/: test_ewjn_fieldcalculator.py
wl/: longskindepthewjn.wl  sphereCurrent.wl  spherePlotB.wl
