[tool.poetry]
name = "ewjn_fieldcalculator"
version = "0.1.0"
description = "Calculates things for long skin depth ewjn"
authors = ["Deepak <mallubhotla.wisc.edu>"]

[tool.poetry.dependencies]
python = "*"
numpy = "^1.15"
scipy = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
ewjnB = "ewjn_fieldcalculator.runner:main"